Fix collapsing download button

--- a/css/style.styl
+++ b/css/style.styl
@@ -269,6 +269,7 @@ nav {
   .item {
     width: 100%;
     height: 8rem;
+    min-height: 8rem;
     line-height: 8rem;
     text-align: center;
     text-transform: uppercase;
